k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: dev
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
